--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "afaq-api",
   "version": "0.1.0",
   "description": "Afaq's project API",
-  "main": "src/index.ts",
+  "main": "src/app.ts",
   "author": "El Mehdi AARAB",
   "license": "MIT",
   "scripts": {
@@ -22,6 +22,7 @@
     "@types/mongoose": "^5.10.5",
     "@types/morgan": "^1.9.2",
     "nodemon": "^2.0.7",
-    "ts-node": "^10.0.0"
+    "ts-node": "^10.0.0",
+    "typescript": "^4.3.5"
   }
 }
